--- a/styles/index.css
+++ b/styles/index.css
@@ -6,4 +6,14 @@
   html {
     font-family: "Barlow", sans-serif;
   }
+  .active:before {
+    content: "";
+    height: 0.2rem;
+    background: #ffffff;
+    width: 10%;
+    position: absolute;
+    bottom: -40%;
+
+    transition: all 0.3s ease-out;
+  }
 }
